# tauri-todo-app-practice

./: README.md  package.json
.cargo/: config.toml
.github/workflows/: build.yaml
app/: output.css
app/src/: App.tsx  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: commands.rs  main.rs
app/src-tauri/src/db/: mod.rs  prisma.rs
app/src/components/: Deadline.tsx  DeadlineModal.tsx  DeleteListModal.tsx  Modal.tsx  RenameListModal.tsx  Sidebar.tsx  TodoItem.tsx  TodoList.tsx
app/src/store/: store.ts
app/src/types/: Result.ts  State.ts  TodoItem.ts  TodoList.ts
prisma_cli/: Cargo.toml  schema.prisma
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/prisma/: dev.db  schema.prisma
src-tauri/src/: commands.rs  main.rs  menu.rs  state.rs
src-tauri/src/db/: migration.sql  mod.rs  prisma.rs
src/components/: Button.tsx  CreateListModal.tsx  Deadline.tsx  Input.tsx  Modal.tsx  Sidebar.tsx  TodoList.tsx
src/store/: store.ts
src/types/: State.ts  Theme.ts  TodoItem.ts  TodoList.ts
